# pasnominator

./: Dockerfile  README.org  pyproject.toml  setup.py
.github/workflows/: add-new-issues-to-repository-based-project-column.yml
examples/: mecab_simple.py
pasnominator/: __init__.py  unit.py
pasnominator/mecab/: nominator.py
pasnominator/tests/: __init__.py
pasnominator/tests/integrations/: spec.py  test_mecab_nominator.py
pasnominator/tests/mecab/: test_nominator.py
pasnominator/tests/units/mecab/: test_nominator.py
scripts/: create_spec_base.sh
