[tool.poetry]
name = "pasnominator"
version = "0.0.1"
description = ""
authors = ["p-baleine <p.baleine@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
mecab-python3 = "^0.996.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
